--- a/templates/god_hands.html
+++ b/templates/god_hands.html
@@ -23,8 +23,239 @@
     <main id="main">
         <div class="container">
             <div>
-                <h1 id="title">XXXXXXXXX</h1>
-                <p id="captioning"><em>The legendary manga artist who was an inspiration to many</em></p>
+                <h1 id="title">God Hands</h1>
+                <div>
+                    <figure>
+                        <img id="proto" src="../img/GOD_HANDS/GOD_HANDS.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                        <!-- Modal -->
+                        <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                            aria-labelledby="berserker-img" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"
+                                            aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img src="../img/GOD_HANDS/Troupe_Faucon.png"
+                                        class="modal-image img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Modal -->
+                        </figure>
+                </div>
+            </div>
+            <br>
+
+            <div id="manga-list">
+                <ul>
+                    <!-- Void -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Void</h2>
+                    </li>
+
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/GOD_HANDS/Void.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/GOD_HANDS/Void.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+
+                    <p class="description"> <strong>Description : </strong> Void est le chef des God Hand, reconnaissable à son apparence squelettique et à son crâne exposé. 
+                        Il est considéré comme le plus ancien et le plus puissant des cinq.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Pouvoirs : </strong> Void possède des capacités de manipulation de l'espace et du temps, lui permettant de créer des portails vers d'autres dimensions. 
+                        Il peut également infliger des douleurs mentales et physiques intenses à ses victimes.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Affinités : </strong> Il représente la sagesse et l'ordre dans le chaos. 
+                        Ses actions semblent guidées par une compréhension profonde et terrifiante de la causalité.
+                    </p>
+                    
+                    <br>
+
+                    <!-- Femto (Griffith) -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Femto (Griffith)</h2>
+                    </li>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/GOD_HANDS/Femto.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/GOD_HANDS/Femto.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+
+                    <p class="description"> <strong>Description : </strong> Femto est l'incarnation démoniaque de Griffith après sa transformation en God Hand.
+                        Il conserve son apparence charismatique mais avec des ailes et une aura maléfique.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Pouvoirs : </strong> Femto possède des capacités de manipulation de la gravité, lui permettant de distordre l'espace autour de lui. 
+                        Il peut voler, créer des champs de force et infliger des destructions massives.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Affinités : </strong> Femto incarne l'ambition et la trahison, utilisant ses pouvoirs pour poursuivre son rêve de domination et de conquête sans aucune pitié.
+                    </p>
+                    <br>
+
+                    <!-- Slan  -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Slan </h2>
+                    </li>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/GOD_HANDS/Slan.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/GOD_HANDS/Slan.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+
+                    <p class="description"> <strong>Description : </strong>  Slan est la seule femme des God Hand, affichant une apparence voluptueuse et provocante. 
+                        Elle représente la luxure et la cruauté.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Pouvoirs : </strong>Slan peut manipuler la chair et le sang, créant des manifestations physiques à partir de matériaux organiques.
+                        Elle est capable d'envahir l'esprit de ses victimes, suscitant des hallucinations érotiques et terrifiantes.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Affinités : </strong> Slan incarne la dépravation et la tentation, se délectant de la souffrance et de la corruption des âmes humaines.
+                    </p>
+                    <br>
+
+                    <!-- Ubik  -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Ubik</h2>
+                    </li>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/GOD_HANDS/Ubik.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/GOD_HANDS/Ubik.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+
+                    <p class="description"> <strong>Description : </strong> Ubik a une apparence grotesque et presque clownesque, avec un visage ressemblant à un masque de théâtre. 
+                        Il est manipulateur et déforme la réalité.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Pouvoirs : </strong> Ubik peut altérer les perceptions et les souvenirs des gens, créant des illusions complexes et convaincantes. 
+                        Il manipule les pensées et les émotions pour semer le doute et la confusion.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Affinités : </strong> Ubik représente la tromperie et la manipulation, jouant avec les esprits des humains pour les amener à des choix désespérés ou destructeurs.
+                    </p>
+                    <br>
+
+                    <!-- Conrad  -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Conrad</h2>
+                    </li>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/GOD_HANDS/Conrad.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/GOD_HANDS/Conrad.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+
+                    <p class="description"> <strong>Description : </strong> Conrad ressemble à une créature hideuse avec des traits d'insecte et de poisson. 
+                        Il est associé à la peste et à la décomposition.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Pouvoirs : </strong>  Conrad a la capacité de répandre des épidémies et des maladies. 
+                        Il peut également contrôler des hordes de créatures pestilentielles, semant la mort et la désolation partout où il passe.
+                    </p>
+                    <br>
+                    <p class="description"> <strong>Affinités : </strong> Conrad incarne la pourriture et la désolation, symbolisant la corruption physique et morale de l'humanité.
+                    </p>
+                    <br>
+
+                </ul>
             </div>
         </div>
     </main>
