--- a/templates/troupe_faucon.html
+++ b/templates/troupe_faucon.html
@@ -23,8 +23,265 @@
     <main id="main">
         <div class="container">
             <div>
-                <h1 id="title">XXXXXXXXX</h1>
-                <p id="captioning"><em>The legendary manga artist who was an inspiration to many</em></p>
+                <h1 id="title">Troupe du Faucon</h1>
+                <p id="captioning"><em>Le légendaire Troupe du Faucon</em></p>
+                <div>
+                    <figure>
+                        <img id="proto" src="../img/Troupe_Faucon/Troupe_Faucon.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                        <!-- Modal -->
+                        <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                            aria-labelledby="berserker-img" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"
+                                            aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img src="../img/Troupe_Faucon/Troupe_Faucon.png"
+                                        class="modal-image img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Modal -->
+                        </figure>
+                </div>
+            </div>
+            <br>
+
+            <div id="manga-list">
+                <ul>
+                    <!-- Guts -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Guts</h2>
+                    </li>
+                    <p class="description"> Guts est un guerrier solitaire et taciturne, connu pour sa force surhumaine et ses talents de combattant exceptionnels. 
+                        Il rejoint la Troupe du Faucon après avoir été vaincu par Griffith. 
+                        Bien qu'il développe une camaraderie avec les membres de la troupe, il lutte constamment contre ses propres démons intérieurs.
+                    </p>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Troupe_Faucon/Guts.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Troupe_Faucon/Guts.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <br>
+
+                    <!-- Griffith -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Griffith</h2>
+                    </li>
+                    <p class="description"> Leader charismatique de la Troupe du Faucon, Griffith est ambitieux, calculateur et d'une beauté presque irréelle. 
+                        Il rêve de posséder son propre royaume et est prêt à tout pour y parvenir. 
+                        Sa détermination et son aura magnétique attirent de nombreux loyaux partisans.
+                    </p>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Troupe_Faucon/Griffith.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>                                        
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Troupe_Faucon/Griffith.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+
+                    <!-- Casca -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Casca</h2>
+                    </li>
+                    <p class="description"> Unique femme commandant au sein de la Troupe du Faucon, Casca est une combattante féroce et loyale.
+                         Elle nourrit des sentiments complexes pour Griffith et Guts, oscillant entre admiration, amour et jalousie. 
+                         Sa détermination et son courage sont sans égal sur le champ de bataille.
+                    </p>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Troupe_Faucon/Casca.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Troupe_Faucon/Casca.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <br>
+
+                    <!-- Judeau -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Judeau</h2>
+                    </li>
+                    <p class="description"> Judeau est un membre polyvalent et intelligent de la Troupe du Faucon, souvent responsable de la reconnaissance et des stratégies. 
+                        Il est également adroit avec les couteaux de lancer. 
+                        Judeau a une personnalité douce et amicale, et nourrit des sentiments non réciproques pour Casca.
+                    </p>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Troupe_Faucon/Judeau.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Troupe_Faucon/Judeau.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <br>
+
+                    <!-- Pippin -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Pippin</h2>
+                    </li>
+                    <p class="description"> Pippin est un géant silencieux au cœur d'or. 
+                        Son rôle principal dans la Troupe du Faucon est celui de combattant de première ligne grâce à sa force brute. 
+                        Bien qu'il parle peu, sa présence imposante et sa loyauté en font un pilier essentiel pour ses compagnons d'armes.
+                    </p>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Troupe_Faucon/Pippin.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Troupe_Faucon/Pippin.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <br>
+
+                    <!-- Rickert -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Rickert</h2>
+                    </li>
+                    <p class="description">Le plus jeune membre de la Troupe du Faucon, Rickert est ingénieux et talentueux en mécanique et en stratégie.
+                         Sa jeunesse et son innocence contrastent avec la brutalité du monde qui l'entoure, mais il fait preuve d'un courage et d'une résilience remarquables.
+                    </p>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Troupe_Faucon/Rickert.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Troupe_Faucon/Rickert.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <br>
+
+                    <!-- Corkus -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Corkus</h2>
+                    </li>
+                    <p class="description"> Corkus est un ancien bandit qui rejoint la Troupe du Faucon, connu pour son sarcasme et son attitude souvent cynique. 
+                        Bien qu'il soit parfois en désaccord avec Griffith et jaloux de Guts, il reste un membre loyal de la troupe, apportant une touche de réalisme brutale à leur dynamique.
+                    </p>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Troupe_Faucon/Corkus.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Troupe_Faucon/Corkus.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <br>
+
+                </ul>
             </div>
         </div>
     </main>
