--- a/templates/header.html
+++ b/templates/header.html
@@ -2,17 +2,22 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="./troupe_faucon.html">Troupe du faucon <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./troupe_faucon.html">Troupe du Faucon</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./god_hands.html">GOD Hands</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./royauté.html">Royauté / Papauté</a>
+                <a class="nav-link" href="./royauté.html">Royauté</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./main_page.html">METTRE LOGO</a>
+                <a class="nav-link" href="./papauté.html">Papauté</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./main_page.html">
+                    <img src="../img/Berserk_logo.png" alt="Berserk Logo" style="height: 35px; width: auto;">
+                </a>
+            </li>            
             <li class="nav-item">
                 <a class="nav-link" href="./demons.html">Demons</a>
             </li>
